--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <title>Carpoint</title>
 
     <!--Style-->
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="assets/style.css" data-n-g="" />
 
     <!--Script-->
 </head>
 <body>
-    <header>
-        Hier kommt der Header
+    <img>
+        
+        <h1>Carpoint</h1>
     </header>
     <main>
         <div class="car_lists">
-
-        </div>
+            <a class="car_item">
+                <p>Golf</p>
+                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+            </a>
+        </d>
     </main>
     <footer>
 
