--- a/index.html
+++ b/index.html
@@ -5,23 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carpoint</title>
 
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet"></link>
+
     <!--Style-->
     <link rel="stylesheet" href="assets/style.css" data-n-g="" />
 
     <!--Script-->
 </head>
 <body>
-    <img>
-        
-        <h1>Carpoint</h1>
+    <header>
+        <img class="car_point_logo" src="assets/platzhalterlogo.jpg" />
+        <h1 class="car_point_titel">CarPoint</h1>
     </header>
     <main>
         <div class="car_lists">
-            <a class="car_item">
-                <p>Golf</p>
+            <a href="car/golf.html" class="car_item">
                 <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <p>Golf</p>
             </a>
-        </d>
+            <a href="car/golf.html" class="car_item">
+                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <p>Golf</p>
+            </a>
+            <a href="car/golf.html" class="car_item">
+                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <p>Golf</p>
+            </a>
+            <a href="car/golf.html" class="car_item">
+                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <p>Golf</p>
+            </a>
+            <a href="car/golf.html" class="car_item">
+                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <p>Golf</p>
+            </a>
+            <a href="car/golf.html" class="car_item">
+                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <p>Golf</p>
+            </a>
+            <a href="car/golf.html" class="car_item">
+                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <p>Golf</p>
+            </a>
+        </div>
     </main>
     <footer>
 
