--- a/car/golf.html
+++ b/car/golf.html
@@ -3,23 +3,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golf</title>
+    <title>Carpoint</title>
+
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet"></link>
 
     <!--Style-->
-    <style>
-
-    </style>
+    <link rel="stylesheet" href="../assets/style.css" data-n-g="" />
 
     <!--Script-->
 </head>
 <body>
     <header>
-        Hier kommt der Header
+        <a href="../index.html">
+            <img class="detail_logo" src="../assets/platzhalterlogo.jpg" />
+        </a>
     </header>
-    <main>
-        <div class="car_lists">
-
+    <main class="detail">
+        <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg"/>
+        <h1>Golf</h1>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <video controls>
+            <source src="../assets/golf/subtitle.mp4" type="video/mp4">
+        </video>
+        <div class="deatil_pictures">
+            <img alt="front" src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" />
+            <img alt="right side" src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" />
+            <img alt="Back" src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" />
+            <img alt="Left Side" src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" />
+            <img alt="Interieur" src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" />
         </div>
+        <audio controls>
+            <source src="../assets/golf/sound.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </main>
     <footer>
 
