--- a/car/golf.html
+++ b/car/golf.html
@@ -18,11 +18,11 @@
 <body>
     <header>
         <a href="../index.html">
-            <img class="detail_logo" src="../assets/platzhalterlogo.jpg" />
+            <img class="detail_logo" src="../assets/Logo.png" />
         </a>
     </header>
     <main class="detail">
-        <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg"/>
+        <img src="/assets/golf/Front.jpg"/>
         <h1>Golf</h1>
         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
         <video controls>
@@ -32,14 +32,14 @@
             <source src="../assets/golf/Golf_Video.mp4" type="video/mp4">
         </video>
         <div class="deatil_pictures">
-            <img alt="front" src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" />
-            <img alt="right side" src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" />
-            <img alt="Back" src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" />
-            <img alt="Left Side" src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" />
-            <img alt="Interieur" src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" />
+            <img alt="front" src="/assets/golf/Front.jpg" />
+            <img alt="right side" src="/assets/golf/RightSide.jpg" />
+            <img alt="Back" src="/assets/golf/Back.jpg" />
+            <img alt="Left Side" src="/assets/golf/LeftSide.jpg" />
+            <img alt="Interieur" src="/assets/golf/leftSideAngle.jpg" />
         </div>
         <audio controls>
-            <source src="../assets/golf/sound.mp3" type="audio/mpeg">
+            <source src="../assets/golf/Golf_Audio.m4a" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
     </main>
