--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 </head>
 <body>
     <header>
-        <img class="car_point_logo" src="assets/platzhalterlogo.jpg" />
+        <img class="car_point_logo" src="assets/Logo.png" />
         <h1 class="car_point_titel">CarPoint</h1>
     </header>
     <main>
         <div class="car_lists">
             <a href="car/golf.html" class="car_item">
-                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg" onmouseover="this.src='assets/golf/view.gif'" onmouseout="this.src='https\:\/\/www.carpoint.de/documents/category/7817/Porsche-356-1.jpg'">
+                <img src="assets/golf/leftSideAngle.jpg" onmouseover="this.src='assets/golf/view.gif'" onmouseout="this.src='assets/golf/leftSideAngle.jpg'">
                 <p>Golf</p>
             </a>
             <a href="car/golf.html" class="car_item">
