add responsive image

--- a/car/golf.html
+++ b/car/golf.html
@@ -43,9 +43,17 @@
             <img alt="Interieur" src="../assets/golf/leftSideAngle.jpg" />
         </div>
         <audio controls>
-            <source src="../assets/golf/Golf_Audio.m4a" type="audio/mpeg">
+            <source src="../assets/golf/audio.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
+        <div>
+            <h2>Weitere Ansicht</h2>
+            <img alt="Ansicht des Golfs" srcset="
+            ../assets/golf/img_responsive/am_kleinsten.jpg 780w,
+            ../assets/golf/img_responsive/noch_kleiner.jpg 1024w,
+            ../assets/golf/img_responsive/kleiner.jpg 1440w,
+            ../assets/golf/img_responsive/orginal.jpg 2400w" width="80%"/>
+        </div>
     </main>
     <footer>
 
