--- a/index.html
+++ b/index.html
@@ -26,27 +26,23 @@
                 <p>Golf</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>Golf</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>Golf</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>Golf</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>Golf</p>
             </a>
             <a href="car/golf.html" class="car_item" >
-                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
-                <p>Golf</p>
-            </a>
-            <a href="car/golf.html" class="car_item">
-                <img src="https://www.carpoint.de/documents/category/7817/Porsche-356-1.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>Golf</p>
             </a>
         </div>
