--- a/car/golf.html
+++ b/car/golf.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,15 @@
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet"></link>
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
+    </link>
 
     <!--Style-->
     <link rel="stylesheet" href="../assets/style.css" data-n-g="" />
 
     <!--Script-->
 </head>
+
 <body>
     <header>
         <a href="../index.html">
@@ -27,8 +30,12 @@
             <source srcset="../assets/golf/Front_Vertikal.jpg">
             <img src="../assets/golf/Front_Vertikal.jpg">
         </picture>
-        <h1>Golf</h1>
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        <h1>VW Golf 7</h1>
+        <p>Dieser schöne Golf kommt aus der 7. Generation der VW Serie, die Facelift Headlights machen einen
+            aggressiveren Eindruck dank fortgeschrittenem Design. Ein super Anfänger Auto welches
+            auch über die Jahre halten kann. Dieses Modell verfügt über einen 1.4L Benzin 4 Zylinder Motor. 122PS
+            schieben mit Kraft nach vorne, mehr braucht es für den Anfang nicht.
+        </p>
         <video controls>
             <!--Untertitle funktionieren bei Chrome und Firefox noch nicht, kann damit zusammenhängen, dass es Lokal geladen wird, beim IE funktionierts-->
             <track src="../assets/golf/subtitleDE.vtt" label="Deutsch" kind="subtitles" srclang="de">
@@ -52,11 +59,12 @@
             ../assets/golf/img_responsive/am_kleinsten.jpg 780w,
             ../assets/golf/img_responsive/noch_kleiner.jpg 1024w,
             ../assets/golf/img_responsive/kleiner.jpg 1440w,
-            ../assets/golf/img_responsive/orginal.jpg 2400w" width="80%"/>
+            ../assets/golf/img_responsive/orginal.jpg 2400w" width="80%" />
         </div>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
