--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,15 @@
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet"></link>
+    <link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
+    </link>
 
     <!--Style-->
     <link rel="stylesheet" href="assets/style.css" data-n-g="" />
 
     <!--Script-->
 </head>
+
 <body>
     <header>
         <img class="car_point_logo" src="assets/Logo.png" />
@@ -22,28 +25,37 @@
     <main>
         <div class="car_lists">
             <a href="car/golf.html" class="car_item">
-                <img src="assets/golf/leftSideAngle.jpg" onmouseover="this.src='assets/golf/view.gif'" onmouseout="this.src='assets/golf/leftSideAngle.jpg'">
-                <p>Golf</p>
+                <img src="assets/golf/leftSideAngle.jpg" onmouseover="this.src='assets/golf/view.gif'"
+                    onmouseout="this.src='assets/golf/leftSideAngle.jpg'">
+                <p>VW Golf 7</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="assets/platzhalter.jpg">
-                <p>Golf</p>
+                <img src="./assets/platzhalter.jpg">
+                <p>Mercedes C300</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="assets/platzhalter.jpg">
-                <p>Golf</p>
+                <img src="./assets/platzhalter.jpg">
+                <p>Audi A5</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="assets/platzhalter.jpg">
-                <p>Golf</p>
+                <img src="./assets/platzhalter.jpg">
+                <p>BMW 340i</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="assets/platzhalter.jpg">
-                <p>Golf</p>
+                <img src="./assets/platzhalter.jpg">
+                <p>Opel Corsa</p>
             </a>
-            <a href="car/golf.html" class="car_item" >
-                <img src="assets/platzhalter.jpg">
-                <p>Golf</p>
+            <a href="car/golf.html" class="car_item">
+                <img src="./assets/platzhalter.jpg">
+                <p>Tesla Model S</p>
+            </a>
+            <a href="car/golf.html" class="car_item">
+                <img src="./assets/platzhalter.jpg">
+                <p>Ford Mustang</p>
+            </a>
+            <a href="impressum.html" class="car_item">
+                <img src="./assets/impressum.jpg">
+                <p>Impressum</p>
             </a>
         </div>
     </main>
@@ -51,4 +63,5 @@
 
     </footer>
 </body>
+
 </html>
