--- a/impressum.html
+++ b/impressum.html
@@ -47,7 +47,15 @@
         </div>
     </main>
     <footer>
-
+        <div>
+            <h2>CarPoint</h2>
+            <p>Informationen über dein Auto!</p>
+        </div>
+        <div style="display: flex; flex-direction: column;">
+            <a href="../index.html">Startseite</a>
+            <a href="../impressum.html">Impressum</a>
+            <a href="../car/golf.html">Golf</a>
+        </div>
     </footer>
 </body>
 
