--- a/index.html
+++ b/index.html
@@ -30,37 +30,49 @@
                 <p>VW Golf 7</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="./assets/platzhalter.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>Mercedes C300</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="./assets/platzhalter.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>Audi A5</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="./assets/platzhalter.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>BMW 340i</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="./assets/platzhalter.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>Opel Corsa</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="./assets/platzhalter.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>Tesla Model S</p>
             </a>
             <a href="car/golf.html" class="car_item">
-                <img src="./assets/platzhalter.jpg">
+                <img src="assets/platzhalter.jpg">
                 <p>Ford Mustang</p>
             </a>
-            <a href="impressum.html" class="car_item">
-                <img src="./assets/impressum.jpg">
-                <p>Impressum</p>
+            <a href="car/golf.html" class="car_item">
+                <img src="assets/platzhalter.jpg">
+                <p>Tesla Model Y</p>
+            </a>
+            <a href="car/golf.html" class="car_item">
+                <img src="assets/platzhalter.jpg">
+                <p>Cybertruck</p>
             </a>
         </div>
     </main>
     <footer>
-
+        <div>
+            <h2>CarPoint</h2>
+            <p>Informationen über dein Auto!</p>
+        </div>
+        <div style="display: flex; flex-direction: column;">
+            <a href="index.html">Startseite</a>
+            <a href="impressum.html">Impressum</a>
+            <a href="car/golf.html">Golf</a>
+        </div>
     </footer>
 </body>
 
