--- a/impressum.html
+++ b/impressum.html
@@ -44,6 +44,11 @@
             <h4>
                 Gewerblich-industrielles Bildungszentrum Zug GIBZ
             </h4>
+            <h4 class="licens_titel">
+                Alle verwendeten medialen Inhalte sind wie folgt lizenziert:
+            </h4>
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Dieses Werk ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Namensnennung-Nicht kommerziell 4.0 International Lizenz</a>.
+        
         </div>
     </main>
     <footer>
