--- a/impressum.html
+++ b/impressum.html
@@ -57,9 +57,9 @@
             <p>Informationen über dein Auto!</p>
         </div>
         <div style="display: flex; flex-direction: column;">
-            <a href="../index.html">Startseite</a>
-            <a href="../impressum.html">Impressum</a>
-            <a href="../car/golf.html">Golf</a>
+            <a href="index.html">Startseite</a>
+            <a href="impressum.html">Impressum</a>
+            <a href="car/golf.html">Golf</a>
         </div>
     </footer>
 </body>
